# omlaxmiquant

./: .gitignore  README.md
.claude/: settings.template.json
ida/: CMakeLists.txt
ida/config/: BinanceConfig.json  StrategyConfig.json
ida/docs/: Binance_Design_Decisions.md  Binance_Implementation_Status.md  Binance_Implementation_Summary.md  Binance_Integration.md  Binance_Integration_Merged.md  Binance_Integration_Status.md  conversation.txt  core_components_issues.md  notes.txt
ida/exchange/: exchange_main.cpp
ida/exchange/market_data/: market_data_publisher.cpp  snapshot_synthesizer.cpp
ida/exchange/matcher/: matching_engine.cpp
ida/exchange/order_server/: order_server.cpp
ida/scripts/: run_binance_tests.sh  run_clients.sh
ida/testing/: CMakeLists.txt
ida/testing/binance/: CMakeLists.txt  test_api.cpp  test_order_gateway.cpp
ida/trading/: test_binance.cpp  trading_main.cpp
ida/trading/market_data/: binance_authenticator.cpp  binance_authenticator.h  binance_config.cpp  binance_config.h  binance_http_client.cpp  binance_http_client.h  binance_market_data_consumer.cpp  binance_market_data_consumer.h  binance_order_book.cpp  binance_order_book.h  binance_types.h  binance_user_data_stream.cpp  binance_user_data_stream.h  binance_websocket_client.cpp  binance_websocket_client.h  market_data_consumer.cpp
ida/trading/order_gw/: binance_order_gateway.cpp  binance_order_gateway.h  order_gateway.cpp  order_gateway.h
ida/trading/strategy/: trade_engine.cpp
pingala/: README.md
pingala/src/: __init__.py
pingala/src/analytics/: __init__.py
pingala/src/api/: __init__.py
pingala/src/data/: __init__.py
pingala/src/models/: __init__.py
sushumna/: README.md
